# view-cif

./: CHANGELOG.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/plans/: 2026-03-06-rebuild-design.md
src/view_cif/: __init__.py  cli.py  config.py  main.py  resolver.py  viewer.py
tests/: test_config.py  test_resolver.py  test_viewer.py
