[project]
name = "view-cif"
version = "0.2.0"
description = "CLI tool to view CIF files from various sources in your editor"
readme = "README.md"
authors = [
    { name = "TomiiLabo", email = "w235434d@yokohama-cu.ac.jp" }
]
requires-python = ">=3.12"
dependencies = [
    "gemmi>=0.7.0",
    "typer>=0.15.2",
    "pyyaml>=6.0",
]

[project.scripts]
view-cif = "view_cif:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]
